@@ -21,6 +21,7 @@
 *   Steve Grubb <sgrubb@redhat.com>
 */
 
+#include "config.h"
 #include <stdlib.h>
 #include <string.h>
 #include "proc-llist.h"
